--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@
           <a href="#contacts" class="btn btn--secondary">Contact me</a>
         </div>
       </div>
-      <nav class="navigation">
-        <p class="navigation__title">
+      <nav class="nav">
+        <p class="nav__title">
           Wanna learn more what I can do?
         </p>
-        <div class="navigation__content">
-          <ul class="navigation__links">
-            <li><a class="navigation__link" href="#about">about</a></li>
-            <li><a class="navigation__link" href="#skills">skills</a></li>
-            <li><a class="navigation__link" href="#career">career</a></li>
+        <div class="nav__content">
+          <ul class="nav__links">
+            <li><a class="js--nav-link nav__link" href="#about">about</a></li>
+            <li><a class="js--nav-link nav__link" href="#skills">skills</a></li>
+            <li><a class="js--nav-link nav__link" href="#career">career</a></li>
           </ul>
           <a
             href="#about"
-            class="navigation__chevron ion-chevron-down"
+            class="nav__chevron ion-chevron-down"
             aria-label="Move up or down"
           ></a>
-          <ul class="navigation__links">
-            <li><a class="navigation__link" href="#projects">projects</a></li>
-            <li><a class="navigation__link" href="#contacts">contacts</a></li>
+          <ul class="nav__links">
+            <li><a class="js--nav-link nav__link" href="#projects">projects</a></li>
+            <li><a class="js--nav-link nav__link" href="#contacts">contacts</a></li>
           </ul>
         </div>
       </nav>
     </header>
 
     <main>
-      <section id="about" class="section about">
+      <section id="about" class="js--section section about">
         <h2 class="section__title about__title">About</h2>
         <div class="section__content about__content">
           <figure class="about__details">
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <section id="skills" class="section skills">
+      <section id="skills" class="js--section section skills">
         <h2 class="section__title skills__title">Skills</h2>
         <div class="section__content skills__content">
           <div class="skills__category-group">
@@ -558,7 +558,7 @@
         </div>
       </section>
 
-      <section id="career" class="section career">
+      <section id="career" class="js--section section career">
         <h2 class="section__title career__title">Career</h2>
         <div class="section__content career__content">
           <ul class="career__groups">
@@ -928,13 +928,13 @@
         </div>
       </section>
 
-      <section id="projects" class="section projects">
+      <section id="projects" class="js--section section projects">
         <h2 class="section__title projects__title">
           Projects
         </h2>
         <div class="section__content projects__content">
           <ul class="projects__list">
-            <li class="projects__item">
+            <li class="js--project__item projects__item">
               <figure>
                 <picture>
                   <img
@@ -973,7 +973,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li class="projects__item">
+            <li class="js--project__item projects__item">
               <figure>
                 <picture>
                   <img
@@ -1008,7 +1008,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li class="projects__item">
+            <li class="js--project__item projects__item">
               <figure>
                 <picture>
                   <img
@@ -1048,7 +1048,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li class="projects__item">
+            <li class="js--project__item projects__item">
               <figure>
                 <picture>
                   <img
@@ -1089,7 +1089,7 @@
       </section>
     </main>
 
-    <footer id="contacts" class="section contacts">
+    <footer id="contacts" class="js--section section contacts">
       <h2 class="section__title contacts__title">Contacts</h2>
       <div class="section__content  contacts__content">
         <div class="contacts__group">
@@ -1188,40 +1188,40 @@
         </div>
       </div>
 
-      <nav class="navigation navigation--bottom">
-        <ul class="navigation__links">
+      <nav class="nav nav--bottom">
+        <ul class="nav__links">
           <li>
-            <a href="#about" class="navigation__link">
-              <span class="navigation__link-icon ion-person"></span>
-              <span class="navigation__link-text">about</span>
+            <a href="#about" class="js--nav-link nav__link">
+              <span class="nav__link-icon ion-person"></span>
+              <span class="nav__link-text">about</span>
             </a>
           </li>
 
           <li>
-            <a href="#skills" class="navigation__link">
-              <span class="navigation__link-icon ion-settings"></span>
-              <span class="navigation__link-text">skills</span>
+            <a href="#skills" class="js--nav-link nav__link">
+              <span class="nav__link-icon ion-settings"></span>
+              <span class="nav__link-text">skills</span>
             </a>
           </li>
 
           <li>
-            <a href="#career" class="navigation__link">
-              <span class="navigation__link-icon ion-briefcase"></span>
-              <span class="navigation__link-text">career</span>
+            <a href="#career" class="js--nav-link nav__link">
+              <span class="nav__link-icon ion-briefcase"></span>
+              <span class="nav__link-text">career</span>
             </a>
           </li>
 
           <li>
-            <a href="#projects" class="navigation__link">
-              <span class="navigation__link-icon ion-erlenmeyer-flask"></span>
-              <span class="navigation__link-text">projects</span>
+            <a href="#projects" class="js--nav-link nav__link">
+              <span class="nav__link-icon ion-erlenmeyer-flask"></span>
+              <span class="nav__link-text">projects</span>
             </a>
           </li>
 
           <li>
-            <a href="#contacts" class="navigation__link">
-              <span class="navigation__link-icon ion-at"></span>
-              <span class="navigation__link-text">contacts</span>
+            <a href="#contacts" class="js--nav-link nav__link">
+              <span class="nav__link-icon ion-at"></span>
+              <span class="nav__link-text">contacts</span>
             </a>
           </li>
         </ul>
