Add animation and sweet scroll for btn links

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
       </div>
       <div class="welcome__actions">
         <div class="welcome__column">
-          <a href="#contacts" class="btn">Hire me</a>
-          <a href="#contacts" class="btn btn--secondary">Contact me</a>
+          <a href="#contacts" class="js--btn-link btn">Hire me</a>
+          <a href="#contacts" class="js--btn-link btn btn--secondary"
+            >Contact me</a
+          >
         </div>
       </div>
       <nav class="nav">
@@ -89,8 +91,12 @@
             aria-label="Move up or down"
           ></a>
           <ul class="nav__links">
-            <li><a class="js--nav-link nav__link" href="#projects">projects</a></li>
-            <li><a class="js--nav-link nav__link" href="#contacts">contacts</a></li>
+            <li>
+              <a class="js--nav-link nav__link" href="#projects">projects</a>
+            </li>
+            <li>
+              <a class="js--nav-link nav__link" href="#contacts">contacts</a>
+            </li>
           </ul>
         </div>
       </nav>
