Add google analitics

--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
     <link rel="stylesheet" href="src/css/welcome/welcome.query.css" />
     <link rel="stylesheet" href="src/css/contacts/contacts.query.css" />
     <link rel="stylesheet" href="src/css/projects/projects.query.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-142547513-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+
+      gtag("js", new Date());
+      gtag("config", "UA-142547513-1");
+    </script>
   </head>
   <body>
     <header class="welcome">
