--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,33 @@
       content="Hello there 😊, I am a skilled Front-End Engineer with 4+ years of working experience both with front-end and back-end. I use the best techniques from both of these two worlds in all projects I am working on using a variety of frameworks such as React and Angular. Wanna learn more what I can do?"
     />
 
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon-16x16.png"
+    />
+    <meta name="theme-color" content="#f4797c" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5" />
+
+    <!-- Startup configuration -->
+    <link rel="manifest" href="manifest.webmanifest" />
+
     <title>Stas Sribnyi | Front-End Engineer | Interactive Resume</title>
 
-    <link rel="stylesheet" href="src/css/ionicons.substitute.css" />
+    <link rel="stylesheet" href="../src/css/ionicons.substitute.css" />
     <link
       rel="stylesheet"
       href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
@@ -23,27 +47,27 @@
       rel="stylesheet"
     />
     <!-- General Styles -->
-    <link rel="stylesheet" href="src/css/base.css" />
-    <link rel="stylesheet" href="src/css/custom.css" />
+    <link rel="stylesheet" href="../src/css/base.css" />
+    <link rel="stylesheet" href="../src/css/custom.css" />
 
     <!-- Component Styles -->
-    <link rel="stylesheet" href="src/css/nav/nav.css" />
-    <link rel="stylesheet" href="src/css/about/about.css" />
-    <link rel="stylesheet" href="src/css/skills/skills.css" />
-    <link rel="stylesheet" href="src/css/career/career.css" />
-    <link rel="stylesheet" href="src/css/welcome/welcome.css" />
-    <link rel="stylesheet" href="src/css/projects/projects.css" />
-    <link rel="stylesheet" href="src/css/contacts/contacts.css" />
+    <link rel="stylesheet" href="../src/css/nav/nav.css" />
+    <link rel="stylesheet" href="../src/css/about/about.css" />
+    <link rel="stylesheet" href="../src/css/skills/skills.css" />
+    <link rel="stylesheet" href="../src/css/career/career.css" />
+    <link rel="stylesheet" href="../src/css/welcome/welcome.css" />
+    <link rel="stylesheet" href="../src/css/projects/projects.css" />
+    <link rel="stylesheet" href="../src/css/contacts/contacts.css" />
 
     <!-- Component Query Styles -->
-    <link rel="stylesheet" href="src/css/custom.query.css" />
-    <link rel="stylesheet" href="src/css/nav/nav.query.css" />
-    <link rel="stylesheet" href="src/css/about/about.query.css" />
-    <link rel="stylesheet" href="src/css/skills/skills.query.css" />
-    <link rel="stylesheet" href="src/css/career/career.query.css" />
-    <link rel="stylesheet" href="src/css/welcome/welcome.query.css" />
-    <link rel="stylesheet" href="src/css/contacts/contacts.query.css" />
-    <link rel="stylesheet" href="src/css/projects/projects.query.css" />
+    <link rel="stylesheet" href="../src/css/custom.query.css" />
+    <link rel="stylesheet" href="../src/css/nav/nav.query.css" />
+    <link rel="stylesheet" href="../src/css/about/about.query.css" />
+    <link rel="stylesheet" href="../src/css/skills/skills.query.css" />
+    <link rel="stylesheet" href="../src/css/career/career.query.css" />
+    <link rel="stylesheet" href="../src/css/welcome/welcome.query.css" />
+    <link rel="stylesheet" href="../src/css/contacts/contacts.query.css" />
+    <link rel="stylesheet" href="../src/css/projects/projects.query.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -125,7 +149,7 @@
           <figure class="about__details">
             <img
               class="about__photo"
-              src="src/img/stassribnyi.jpg"
+              src="../src/img/stassribnyi.jpg"
               alt="Stas Sribnyi"
             />
             <figcaption>
@@ -589,7 +613,7 @@
               <ul class="career__work-stages">
                 <li class="career__work-stage">
                   <figure class="career__company">
-                    <img src="src/img/career/innovecs.png" alt="Innovecs" />
+                    <img src="../src/img/career/innovecs.png" alt="Innovecs" />
                     <figcaption>
                       <p class="career__company-name">Innovecs</p>
                       <p>Apr 2019 &mdash; Present</p>
@@ -623,7 +647,7 @@
                 </li>
                 <li class="career__work-stage">
                   <figure class="career__company">
-                    <img src="src/img/career/caspio.png" alt="Caspio" />
+                    <img src="../src/img/career/caspio.png" alt="Caspio" />
                     <figcaption>
                       <p class="career__company-name">Caspio</p>
                       <p>Aug 2017 &mdash; Apr 2019</p>
@@ -671,7 +695,10 @@
                 </li>
                 <li class="career__work-stage">
                   <figure class="career__company">
-                    <img src="src/img/career/altexsoft.png" alt="AltexSoft" />
+                    <img
+                      src="../src/img/career/altexsoft.png"
+                      alt="AltexSoft"
+                    />
                     <figcaption>
                       <p class="career__company-name">AltexSoft</p>
                       <p>Jul 2015 &mdash; Aug 2017</p>
@@ -726,7 +753,7 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="src/img/career/krnu.png"
+                      src="../src/img/career/krnu.png"
                       alt="Kremenchuk State Polytechnical University"
                     />
                     <figcaption>
@@ -748,7 +775,7 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="src/img/career/altexsoft-labs.png"
+                      src="../src/img/career/altexsoft-labs.png"
                       alt="AltexSoft Labs"
                     />
                     <figcaption>
@@ -771,7 +798,7 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="src/img/career/krnu.png"
+                      src="../src/img/career/krnu.png"
                       alt="Kremenchuk State Polytechnical University"
                     />
                     <figcaption>
@@ -963,14 +990,14 @@
                     class="projects__item-thumbnail"
                     sizes="(max-width: 1024px) 100vw, 1024px"
                     srcset="
-                      src/img/projects/canvas-practice_320.png   320w,
-                      src/img/projects/canvas-practice_486.png   486w,
-                      src/img/projects/canvas-practice_625.png   625w,
-                      src/img/projects/canvas-practice_749.png   749w,
-                      src/img/projects/canvas-practice_869.png   869w,
-                      src/img/projects/canvas-practice_1024.png 1024w
+                      ../src/img/projects/canvas-practice_320.png   320w,
+                      ../src/img/projects/canvas-practice_486.png   486w,
+                      ../src/img/projects/canvas-practice_625.png   625w,
+                      ../src/img/projects/canvas-practice_749.png   749w,
+                      ../src/img/projects/canvas-practice_869.png   869w,
+                      ../src/img/projects/canvas-practice_1024.png 1024w
                     "
-                    src="src/img/projects/canvas-practice_1024.png"
+                    src="../src/img/projects/canvas-practice_1024.png"
                     alt="Canvas Practice"
                   />
                 </picture>
@@ -1001,11 +1028,11 @@
                   <img
                     sizes="(max-width: 1024px) 100vw, 1024px"
                     srcset="
-                      src/img/projects/todo-list-react_320.png   320w,
-                      src/img/projects/todo-list-react_896.png   896w,
-                      src/img/projects/todo-list-react_1024.png 1024w
+                      ../src/img/projects/todo-list-react_320.png   320w,
+                      ../src/img/projects/todo-list-react_896.png   896w,
+                      ../src/img/projects/todo-list-react_1024.png 1024w
                     "
-                    src="src/img/projects/todo-list-react_1024.png"
+                    src="../src/img/projects/todo-list-react_1024.png"
                     class="projects__item-thumbnail"
                     alt="ToDo List React"
                   />
@@ -1037,14 +1064,14 @@
                     class="projects__item-thumbnail"
                     sizes="(max-width: 1024px) 100vw, 1024px"
                     srcset="
-                      src/img/projects/image-manager_320.png   320w,
-                      src/img/projects/image-manager_518.png   486w,
-                      src/img/projects/image-manager_665.png   625w,
-                      src/img/projects/image-manager_801.png   749w,
-                      src/img/projects/image-manager_921.png   869w,
-                      src/img/projects/image-manager_1024.png 1024w
+                      ../src/img/projects/image-manager_320.png   320w,
+                      ../src/img/projects/image-manager_518.png   486w,
+                      ../src/img/projects/image-manager_665.png   625w,
+                      ../src/img/projects/image-manager_801.png   749w,
+                      ../src/img/projects/image-manager_921.png   869w,
+                      ../src/img/projects/image-manager_1024.png 1024w
                     "
-                    src="src/img/projects/image-manager_1024.png"
+                    src="../src/img/projects/image-manager_1024.png"
                     alt="Image Manager"
                   />
                 </picture>
@@ -1076,11 +1103,11 @@
                   <img
                     sizes="(max-width: 1024px) 100vw, 1024px"
                     srcset="
-                      src/img/projects/magic-app-redux_320.png   320w,
-                      src/img/projects/magic-app-redux_920.png   920w,
-                      src/img/projects/magic-app-redux_1024.png 1024w
+                      ../src/img/projects/magic-app-redux_320.png   320w,
+                      ../src/img/projects/magic-app-redux_920.png   920w,
+                      ../src/img/projects/magic-app-redux_1024.png 1024w
                     "
-                    src="src/img/projects/magic-app-redux_1024.png"
+                    src="../src/img/projects/magic-app-redux_1024.png"
                     class="projects__item-thumbnail"
                     alt="Magic App (Redux)"
                   />
@@ -1250,6 +1277,6 @@
       </nav>
     </footer>
 
-    <script src="src/js/main.js"></script>
+    <script src="../src/js/main.js"></script>
   </body>
 </html>
