--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       sizes="16x16"
       href="images/favicon-16x16.png"
     />
-    <meta name="theme-color" content="#f4797c" />
+    <meta name="theme-color" content="#f3f2ef" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5" />
 
@@ -37,37 +37,45 @@
 
     <title>Stas Sribnyi | Front-End Engineer | Interactive Resume</title>
 
-    <link rel="stylesheet" href="../src/css/ionicons.substitute.css" />
+    <link rel="stylesheet" href="static/css/ionicons.substitute.css" />
     <link
       rel="stylesheet"
-      href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/css/glide.core.min.css"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap"
       rel="stylesheet"
     />
     <!-- General Styles -->
-    <link rel="stylesheet" href="../src/css/base.css" />
-    <link rel="stylesheet" href="../src/css/custom.css" />
+    <link rel="stylesheet" href="static/css/base.css" />
+    <link rel="stylesheet" href="static/css/custom.css" />
 
     <!-- Component Styles -->
-    <link rel="stylesheet" href="../src/css/nav/nav.css" />
-    <link rel="stylesheet" href="../src/css/about/about.css" />
-    <link rel="stylesheet" href="../src/css/skills/skills.css" />
-    <link rel="stylesheet" href="../src/css/career/career.css" />
-    <link rel="stylesheet" href="../src/css/welcome/welcome.css" />
-    <link rel="stylesheet" href="../src/css/projects/projects.css" />
-    <link rel="stylesheet" href="../src/css/contacts/contacts.css" />
+    <link rel="stylesheet" href="static/css/nav/nav.css" />
+    <link rel="stylesheet" href="static/css/about/about.css" />
+    <link rel="stylesheet" href="static/css/skills/skills.css" />
+    <link rel="stylesheet" href="static/css/career/career.css" />
+    <link rel="stylesheet" href="static/css/welcome/welcome.css" />
+    <link rel="stylesheet" href="static/css/projects/projects.css" />
+    <link rel="stylesheet" href="static/css/contacts/contacts.css" />
 
     <!-- Component Query Styles -->
-    <link rel="stylesheet" href="../src/css/custom.query.css" />
-    <link rel="stylesheet" href="../src/css/nav/nav.query.css" />
-    <link rel="stylesheet" href="../src/css/about/about.query.css" />
-    <link rel="stylesheet" href="../src/css/skills/skills.query.css" />
-    <link rel="stylesheet" href="../src/css/career/career.query.css" />
-    <link rel="stylesheet" href="../src/css/welcome/welcome.query.css" />
-    <link rel="stylesheet" href="../src/css/contacts/contacts.query.css" />
-    <link rel="stylesheet" href="../src/css/projects/projects.query.css" />
+    <link rel="stylesheet" href="static/css/custom.query.css" />
+    <link rel="stylesheet" href="static/css/nav/nav.query.css" />
+    <link rel="stylesheet" href="static/css/about/about.query.css" />
+    <link rel="stylesheet" href="static/css/skills/skills.query.css" />
+    <link rel="stylesheet" href="static/css/career/career.query.css" />
+    <link rel="stylesheet" href="static/css/welcome/welcome.query.css" />
+    <link rel="stylesheet" href="static/css/contacts/contacts.query.css" />
+    <link rel="stylesheet" href="static/css/projects/projects.query.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -149,7 +157,7 @@
           <figure class="about__details">
             <img
               class="about__photo"
-              src="../src/img/stassribnyi.jpg"
+              src="static/img/stassribnyi.jpg"
               alt="Stas Sribnyi"
             />
             <figcaption>
@@ -613,7 +621,7 @@
               <ul class="career__work-stages">
                 <li class="career__work-stage">
                   <figure class="career__company">
-                    <img src="../src/img/career/innovecs.png" alt="Innovecs" />
+                    <img src="static/img/career/innovecs.png" alt="Innovecs" />
                     <figcaption>
                       <p class="career__company-name">Innovecs</p>
                       <p>Apr 2019 &mdash; Present</p>
@@ -647,7 +655,7 @@
                 </li>
                 <li class="career__work-stage">
                   <figure class="career__company">
-                    <img src="../src/img/career/caspio.png" alt="Caspio" />
+                    <img src="static/img/career/caspio.png" alt="Caspio" />
                     <figcaption>
                       <p class="career__company-name">Caspio</p>
                       <p>Aug 2017 &mdash; Apr 2019</p>
@@ -696,7 +704,7 @@
                 <li class="career__work-stage">
                   <figure class="career__company">
                     <img
-                      src="../src/img/career/altexsoft.png"
+                      src="static/img/career/altexsoft.png"
                       alt="AltexSoft"
                     />
                     <figcaption>
@@ -753,7 +761,7 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="../src/img/career/krnu.png"
+                      src="static/img/career/krnu.png"
                       alt="Kremenchuk State Polytechnical University"
                     />
                     <figcaption>
@@ -775,7 +783,7 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="../src/img/career/altexsoft-labs.png"
+                      src="static/img/career/altexsoft-labs.png"
                       alt="AltexSoft Labs"
                     />
                     <figcaption>
@@ -798,7 +806,7 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      src="../src/img/career/krnu.png"
+                      src="static/img/career/krnu.png"
                       alt="Kremenchuk State Polytechnical University"
                     />
                     <figcaption>
@@ -990,14 +998,14 @@
                     class="projects__item-thumbnail"
                     sizes="(max-width: 1024px) 100vw, 1024px"
                     srcset="
-                      ../src/img/projects/canvas-practice_320.png   320w,
-                      ../src/img/projects/canvas-practice_486.png   486w,
-                      ../src/img/projects/canvas-practice_625.png   625w,
-                      ../src/img/projects/canvas-practice_749.png   749w,
-                      ../src/img/projects/canvas-practice_869.png   869w,
-                      ../src/img/projects/canvas-practice_1024.png 1024w
+                      static/img/projects/canvas-practice_320.png   320w,
+                      static/img/projects/canvas-practice_486.png   486w,
+                      static/img/projects/canvas-practice_625.png   625w,
+                      static/img/projects/canvas-practice_749.png   749w,
+                      static/img/projects/canvas-practice_869.png   869w,
+                      static/img/projects/canvas-practice_1024.png 1024w
                     "
-                    src="../src/img/projects/canvas-practice_1024.png"
+                    src="static/img/projects/canvas-practice_1024.png"
                     alt="Canvas Practice"
                   />
                 </picture>
@@ -1028,11 +1036,11 @@
                   <img
                     sizes="(max-width: 1024px) 100vw, 1024px"
                     srcset="
-                      ../src/img/projects/todo-list-react_320.png   320w,
-                      ../src/img/projects/todo-list-react_896.png   896w,
-                      ../src/img/projects/todo-list-react_1024.png 1024w
+                      static/img/projects/todo-list-react_320.png   320w,
+                      static/img/projects/todo-list-react_896.png   896w,
+                      static/img/projects/todo-list-react_1024.png 1024w
                     "
-                    src="../src/img/projects/todo-list-react_1024.png"
+                    src="static/img/projects/todo-list-react_1024.png"
                     class="projects__item-thumbnail"
                     alt="ToDo List React"
                   />
@@ -1064,14 +1072,14 @@
                     class="projects__item-thumbnail"
                     sizes="(max-width: 1024px) 100vw, 1024px"
                     srcset="
-                      ../src/img/projects/image-manager_320.png   320w,
-                      ../src/img/projects/image-manager_518.png   486w,
-                      ../src/img/projects/image-manager_665.png   625w,
-                      ../src/img/projects/image-manager_801.png   749w,
-                      ../src/img/projects/image-manager_921.png   869w,
-                      ../src/img/projects/image-manager_1024.png 1024w
+                      static/img/projects/image-manager_320.png   320w,
+                      static/img/projects/image-manager_518.png   486w,
+                      static/img/projects/image-manager_665.png   625w,
+                      static/img/projects/image-manager_801.png   749w,
+                      static/img/projects/image-manager_921.png   869w,
+                      static/img/projects/image-manager_1024.png 1024w
                     "
-                    src="../src/img/projects/image-manager_1024.png"
+                    src="static/img/projects/image-manager_1024.png"
                     alt="Image Manager"
                   />
                 </picture>
@@ -1103,11 +1111,11 @@
                   <img
                     sizes="(max-width: 1024px) 100vw, 1024px"
                     srcset="
-                      ../src/img/projects/magic-app-redux_320.png   320w,
-                      ../src/img/projects/magic-app-redux_920.png   920w,
-                      ../src/img/projects/magic-app-redux_1024.png 1024w
+                      static/img/projects/magic-app-redux_320.png   320w,
+                      static/img/projects/magic-app-redux_920.png   920w,
+                      static/img/projects/magic-app-redux_1024.png 1024w
                     "
-                    src="../src/img/projects/magic-app-redux_1024.png"
+                    src="static/img/projects/magic-app-redux_1024.png"
                     class="projects__item-thumbnail"
                     alt="Magic App (Redux)"
                   />
@@ -1277,6 +1285,9 @@
       </nav>
     </footer>
 
-    <script src="../src/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/glide.min.js"></script>
+    <script src="https://unpkg.com/waypoints@4.0.1/lib/noframework.waypoints.min.js"></script>
+    <script src="https://unpkg.com/sweet-scroll@4.0.0/sweet-scroll.min.js"></script>
+    <script src="static/js/index.js" type="module"></script>
   </body>
 </html>
