--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
     <title>Stas Sribnyi | Front-End Engineer | Interactive Resume</title>
 
+    <!-- Substitute for ionicons to display at least something until icons will be loaded -->
     <link rel="stylesheet" href="static/css/ionicons.substitute.css" />
+
+    <!-- External Styles -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
@@ -54,6 +57,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap"
       rel="stylesheet"
     />
+
     <!-- General Styles -->
     <link rel="stylesheet" href="static/css/base.css" />
     <link rel="stylesheet" href="static/css/custom.css" />
@@ -92,6 +96,23 @@
       gtag("js", new Date());
       gtag("config", "UA-142547513-1");
     </script>
+
+    <!-- External Scripts -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/glide.min.js"
+    ></script>
+    <script
+      defer
+      src="https://unpkg.com/waypoints@4.0.1/lib/noframework.waypoints.min.js"
+    ></script>
+    <script
+      defer
+      src="https://unpkg.com/sweet-scroll@4.0.0/sweet-scroll.min.js"
+    ></script>
+
+    <!-- Main Script -->
+    <script defer src="static/js/index.js" type="module"></script>
   </head>
   <body>
     <header class="welcome">
@@ -1284,10 +1305,5 @@
         </ul>
       </nav>
     </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/glide.min.js"></script>
-    <script src="https://unpkg.com/waypoints@4.0.1/lib/noframework.waypoints.min.js"></script>
-    <script src="https://unpkg.com/sweet-scroll@4.0.0/sweet-scroll.min.js"></script>
-    <script src="static/js/index.js" type="module"></script>
   </body>
 </html>
