--- a/index.html
+++ b/index.html
@@ -37,37 +37,60 @@
 
     <title>Stas Sribnyi | Front-End Engineer | Interactive Resume</title>
 
-    <!-- Substitute for ionicons to display at least something until icons will be loaded -->
-    <link rel="stylesheet" href="static/css/ionicons.substitute.css" />
 
     <!-- External Styles -->
+    <!-- Normalize -->
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      rel="preload"
+      as="style"
+      onload="this.onload = null;this.rel = 'stylesheet';"
     />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      />
+    </noscript>
+
+    <!-- Glide JS -->
     <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/css/glide.core.min.css"
+      rel="preload"
+      as="style"
+      onload="this.onload = null;this.rel = 'stylesheet';"
     />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.3.0/css/glide.core.min.css"
+      />
+    </noscript>
+
+    <!-- Roboto Condensed -->
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i&display=swap"
-      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,700&display=swap"
+      rel="preload"
+      as="style"
+      onload="this.onload = null;this.rel = 'stylesheet';"
     />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,700&display=swap"
+      />
+    </noscript>
 
     <!-- General Styles -->
     <link rel="stylesheet" href="static/css/base.css" />
     <link rel="stylesheet" href="static/css/custom.css" />
+    <link rel="stylesheet" href="static/css/ionicons.substitute.css" />
 
     <!-- Component Styles -->
     <link rel="stylesheet" href="static/css/nav/nav.css" />
     <link rel="stylesheet" href="static/css/about/about.css" />
     <link rel="stylesheet" href="static/css/skills/skills.css" />
     <link rel="stylesheet" href="static/css/career/career.css" />
-    <link rel="stylesheet" href="static/css/welcome/welcome.css" />
     <link rel="stylesheet" href="static/css/projects/projects.css" />
     <link rel="stylesheet" href="static/css/contacts/contacts.css" />
 
@@ -77,9 +100,29 @@
     <link rel="stylesheet" href="static/css/about/about.query.css" />
     <link rel="stylesheet" href="static/css/skills/skills.query.css" />
     <link rel="stylesheet" href="static/css/career/career.query.css" />
-    <link rel="stylesheet" href="static/css/welcome/welcome.query.css" />
     <link rel="stylesheet" href="static/css/contacts/contacts.query.css" />
     <link rel="stylesheet" href="static/css/projects/projects.query.css" />
+
+    <!-- Render Blocking Styles -->
+    <link
+      href="static/css/welcome/welcome.css"
+      rel="preload"
+      as="style"
+      onload="this.onload = null;this.rel = 'stylesheet';"
+    />
+    <noscript>
+      <link rel="stylesheet" href="static/css/welcome/welcome.css" />
+    </noscript>
+
+    <link
+      href="static/css/welcome/welcome.query.css"
+      rel="preload"
+      as="style"
+      onload="this.onload = null;this.rel = 'stylesheet';"
+    />
+    <noscript>
+      <link rel="stylesheet" href="static/css/welcome/welcome.query.css" />
+    </noscript>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
