Add noscript support and fix layout bugs

--- a/index.html
+++ b/index.html
@@ -223,11 +223,18 @@
         <div class="section__content about__content">
           <figure class="about__details">
             <img
-              class="about__photo lozad"
+              class="about__photo lozad lozad-hidden"
               data-src="static/img/stassribnyi.jpg"
               src="static/img/placeholder.gif"
               alt="Stas Sribnyi"
             />
+            <noscript>
+              <img
+                class="about__photo"
+                src="static/img/stassribnyi.jpg"
+                alt="Stas Sribnyi"
+              />
+            </noscript>
             <figcaption>
               <ul>
                 <li class="about__detail">
@@ -690,11 +697,17 @@
                 <li class="career__work-stage">
                   <figure class="career__company">
                     <img
-                      class="lozad"
+                      class="lozad lozad-hidden"
                       data-src="static/img/career/innovecs.png"
                       src="static/img/placeholder.gif"
                       alt="Innovecs"
                     />
+                    <noscript>
+                      <img
+                        src="static/img/career/innovecs.png"
+                        alt="Innovecs"
+                      />
+                    </noscript>
                     <figcaption>
                       <p class="career__company-name">Innovecs</p>
                       <p>Apr 2019 &mdash; Present</p>
@@ -729,11 +742,14 @@
                 <li class="career__work-stage">
                   <figure class="career__company">
                     <img
-                      class="lozad"
+                      class="lozad lozad-hidden"
                       data-src="static/img/career/caspio.png"
                       src="static/img/placeholder.gif"
                       alt="Caspio"
                     />
+                    <noscript>
+                      <img src="static/img/career/caspio.png" alt="Caspio" />
+                    </noscript>
                     <figcaption>
                       <p class="career__company-name">Caspio</p>
                       <p>Aug 2017 &mdash; Apr 2019</p>
@@ -782,11 +798,17 @@
                 <li class="career__work-stage">
                   <figure class="career__company">
                     <img
-                      class="lozad"
+                      class="lozad lozad-hidden"
                       data-src="static/img/career/altexsoft.png"
                       src="static/img/placeholder.gif"
                       alt="AltexSoft"
                     />
+                    <noscript>
+                      <img
+                        src="static/img/career/altexsoft.png"
+                        alt="AltexSoft"
+                      />
+                    </noscript>
                     <figcaption>
                       <p class="career__company-name">AltexSoft</p>
                       <p>Jul 2015 &mdash; Aug 2017</p>
@@ -841,11 +863,17 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      class="lozad"
+                      class="lozad lozad-hidden"
                       data-src="static/img/career/krnu.png"
                       src="static/img/placeholder.gif"
                       alt="Kremenchuk State Polytechnical University"
                     />
+                    <noscript>
+                      <img
+                        src="static/img/career/krnu.png"
+                        alt="Kremenchuk State Polytechnical University"
+                      />
+                    </noscript>
                     <figcaption>
                       <p>Sept 2016 &mdash; Aug 2018</p>
                     </figcaption>
@@ -865,11 +893,17 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      class="lozad"
+                      class="lozad lozad-hidden"
                       data-src="static/img/career/altexsoft-labs.png"
                       src="static/img/placeholder.gif"
                       alt="AltexSoft Labs"
                     />
+                    <noscript>
+                      <img
+                        src="static/img/career/altexsoft-labs.png"
+                        alt="AltexSoft Labs"
+                      />
+                    </noscript>
                     <figcaption>
                       <p>Oct 2014 &mdash; Jul 2015</p>
                     </figcaption>
@@ -890,11 +924,17 @@
                 <li class="career__education-stage">
                   <figure class="career__institution">
                     <img
-                      class="lozad"
+                      class="lozad lozad-hidden"
                       data-src="static/img/career/krnu.png"
                       src="static/img/placeholder.gif"
                       alt="Kremenchuk State Polytechnical University"
                     />
+                    <noscript>
+                      <img
+                        src="static/img/career/krnu.png"
+                        alt="Kremenchuk State Polytechnical University"
+                      />
+                    </noscript>
                     <figcaption>
                       <p>Sept 2012 &mdash; Aug 2016</p>
                     </figcaption>
@@ -935,11 +975,17 @@
                             href="https://www.linkedin.com/in/nickolay-sredin-518b2037/"
                           >
                             <img
-                              class="lozad"
+                              class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
                               src="static/img/placeholder.gif"
                               alt="Nickolay Sredin"
                             />
+                            <noscript>
+                              <img
+                                src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
+                                alt="Nickolay Sredin"
+                              />
+                            </noscript>
                             <div>
                               <h4>Nikolai Sredin</h4>
                               <p>Senior QA Engineer</p>
@@ -962,11 +1008,17 @@
                             href="https://www.linkedin.com/in/zakir-nuriev-8373b0a1/"
                           >
                             <img
-                              class="lozad"
+                              class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
                               src="static/img/placeholder.gif"
                               alt="Zakir Nuriev"
                             />
+                            <noscript>
+                              <img
+                                src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
+                                alt="Zakir Nuriev"
+                              />
+                            </noscript>
                             <div>
                               <h4>Zakir Nuriev</h4>
                               <p>Senior Front-End Developer</p>
@@ -991,11 +1043,17 @@
                             href="https://www.linkedin.com/in/beata-dobosiewicz-a64802ba/"
                           >
                             <img
-                              class="lozad"
+                              class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
                               src="static/img/placeholder.gif"
                               alt="Beata Dobosiewicz"
                             />
+                            <noscript>
+                              <img
+                                src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
+                                alt="Beata Dobosiewicz"
+                              />
+                            </noscript>
                             <div>
                               <h4>Beata Dobosiewicz</h4>
                               <p>Full-Stack .NET Developer</p>
@@ -1026,11 +1084,17 @@
                             href="https://www.linkedin.com/in/vgordiyenko/"
                           >
                             <img
-                              class="lozad"
+                              class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
                               src="static/img/placeholder.gif"
                               alt="Vitaliy Gordiyenko"
                             />
+                            <noscript>
+                              <img
+                                src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
+                                alt="Vitaliy Gordiyenko"
+                              />
+                            </noscript>
                             <div>
                               <h4>Vitaliy Gordiyenko</h4>
                               <p>Senior Project Manager</p>
@@ -1057,11 +1121,17 @@
                             href="https://www.linkedin.com/in/anton-vasko-b87088a2/"
                           >
                             <img
-                              class="lozad"
+                              class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
                               src="static/img/placeholder.gif"
                               alt="Anton Vasko"
                             />
+                            <noscript>
+                              <img
+                                src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
+                                alt="Anton Vasko"
+                              />
+                            </noscript>
                             <div>
                               <h4>Anton Vasko</h4>
                               <p>Senior Software Engineering</p>
@@ -1102,9 +1172,25 @@
                     "
                     data-src="static/img/projects/canvas-practice_1024.png"
                     src="static/img/placeholder.gif"
-                    class="projects__item-thumbnail lozad"
+                    class="projects__item-thumbnail lozad lozad-hidden"
                     alt="Canvas Practice"
                   />
+                  <noscript>
+                    <img
+                      sizes="(max-width: 1024px) 100vw, 1024px"
+                      srcset="
+                        static/img/projects/canvas-practice_320.png   320w,
+                        static/img/projects/canvas-practice_486.png   486w,
+                        static/img/projects/canvas-practice_625.png   625w,
+                        static/img/projects/canvas-practice_749.png   749w,
+                        static/img/projects/canvas-practice_869.png   869w,
+                        static/img/projects/canvas-practice_1024.png 1024w
+                      "
+                      src="static/img/projects/canvas-practice_1024.png"
+                      class="projects__item-thumbnail"
+                      alt="Canvas Practice"
+                    />
+                  </noscript>
                 </picture>
                 <figcaption>
                   <div class="project__item-details">
@@ -1139,9 +1225,22 @@
                     "
                     data-src="static/img/projects/todo-list-react_1024.png"
                     src="static/img/placeholder.gif"
-                    class="projects__item-thumbnail lozad"
+                    class="projects__item-thumbnail lozad lozad-hidden"
                     alt="ToDo List React"
                   />
+                  <noscript>
+                    <img
+                      sizes="(max-width: 1024px) 100vw, 1024px"
+                      srcset="
+                        static/img/projects/todo-list-react_320.png   320w,
+                        static/img/projects/todo-list-react_896.png   896w,
+                        static/img/projects/todo-list-react_1024.png 1024w
+                      "
+                      src="static/img/projects/todo-list-react_1024.png"
+                      class="projects__item-thumbnail"
+                      alt="ToDo List React"
+                    />
+                  </noscript>
                 </picture>
                 <figcaption>
                   <div class="project__item-details">
@@ -1178,9 +1277,25 @@
                     "
                     data-src="static/img/projects/image-manager_1024.png"
                     src="static/img/placeholder.gif"
-                    class="projects__item-thumbnail lozad"
+                    class="projects__item-thumbnail lozad lozad-hidden"
                     alt="Image Manager"
                   />
+                  <noscript>
+                    <img
+                      sizes="(max-width: 1024px) 100vw, 1024px"
+                      srcset="
+                        static/img/projects/image-manager_320.png   320w,
+                        static/img/projects/image-manager_518.png   486w,
+                        static/img/projects/image-manager_665.png   625w,
+                        static/img/projects/image-manager_801.png   749w,
+                        static/img/projects/image-manager_921.png   869w,
+                        static/img/projects/image-manager_1024.png 1024w
+                      "
+                      src="static/img/projects/image-manager_1024.png"
+                      class="projects__item-thumbnail"
+                      alt="Image Manager"
+                    />
+                  </noscript>
                 </picture>
                 <figcaption>
                   <div class="project__item-details">
@@ -1216,9 +1331,22 @@
                     "
                     data-src="static/img/projects/magic-app-redux_1024.png"
                     src="static/img/placeholder.gif"
-                    class="projects__item-thumbnail lozad"
+                    class="projects__item-thumbnail lozad lozad-hidden"
                     alt="Magic App (Redux)"
                   />
+                  <noscript>
+                      <img
+                      sizes="(max-width: 1024px) 100vw, 1024px"
+                      srcset="
+                        static/img/projects/magic-app-redux_320.png   320w,
+                        static/img/projects/magic-app-redux_920.png   920w,
+                        static/img/projects/magic-app-redux_1024.png 1024w
+                      "
+                      src="static/img/projects/magic-app-redux_1024.png"
+                      class="projects__item-thumbnail"
+                      alt="Magic App (Redux)"
+                    />
+                  </noscript>
                 </picture>
                 <figcaption>
                   <div class="project__item-details">
