--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <!-- Component Query Styles -->
     <link rel="stylesheet" href="static/css/custom.query.css" />
     <link rel="stylesheet" href="static/css/nav/nav.query.css" />
+    <link rel="stylesheet" href="static/css/welcome/welcome.css" />
     <link rel="stylesheet" href="static/css/about/about.query.css" />
     <link rel="stylesheet" href="static/css/skills/skills.query.css" />
     <link rel="stylesheet" href="static/css/career/career.query.css" />
@@ -103,16 +104,6 @@
     <link rel="stylesheet" href="static/css/projects/projects.query.css" />
 
     <!-- Render Blocking Styles -->
-    <link
-      href="static/css/welcome/welcome.css"
-      rel="preload"
-      as="style"
-      onload="this.onload = null;this.rel = 'stylesheet';"
-    />
-    <noscript>
-      <link rel="stylesheet" href="static/css/welcome/welcome.css" />
-    </noscript>
-
     <link
       href="static/css/welcome/welcome.query.css"
       rel="preload"
@@ -225,7 +216,7 @@
             <img
               class="about__photo lozad lozad-hidden"
               data-src="static/img/stassribnyi.jpg"
-              src="static/img/placeholder.gif"
+              src="static/img/placeholder-square.png"
               alt="Stas Sribnyi"
             />
             <noscript>
@@ -699,7 +690,7 @@
                     <img
                       class="lozad lozad-hidden"
                       data-src="static/img/career/innovecs.png"
-                      src="static/img/placeholder.gif"
+                      src="static/img/placeholder-square.png"
                       alt="Innovecs"
                     />
                     <noscript>
@@ -744,7 +735,7 @@
                     <img
                       class="lozad lozad-hidden"
                       data-src="static/img/career/caspio.png"
-                      src="static/img/placeholder.gif"
+                      src="static/img/placeholder-square.png"
                       alt="Caspio"
                     />
                     <noscript>
@@ -800,7 +791,7 @@
                     <img
                       class="lozad lozad-hidden"
                       data-src="static/img/career/altexsoft.png"
-                      src="static/img/placeholder.gif"
+                      src="static/img/placeholder-square.png"
                       alt="AltexSoft"
                     />
                     <noscript>
@@ -865,7 +856,7 @@
                     <img
                       class="lozad lozad-hidden"
                       data-src="static/img/career/krnu.png"
-                      src="static/img/placeholder.gif"
+                      src="static/img/placeholder-square.png"
                       alt="Kremenchuk State Polytechnical University"
                     />
                     <noscript>
@@ -895,7 +886,7 @@
                     <img
                       class="lozad lozad-hidden"
                       data-src="static/img/career/altexsoft-labs.png"
-                      src="static/img/placeholder.gif"
+                      src="static/img/placeholder-square.png"
                       alt="AltexSoft Labs"
                     />
                     <noscript>
@@ -926,7 +917,7 @@
                     <img
                       class="lozad lozad-hidden"
                       data-src="static/img/career/krnu.png"
-                      src="static/img/placeholder.gif"
+                      src="static/img/placeholder-square.png"
                       alt="Kremenchuk State Polytechnical University"
                     />
                     <noscript>
@@ -977,7 +968,7 @@
                             <img
                               class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C5603AQFcUct8hBOQDg/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=NjEpSGEARFYYaWdQRKkODzujSu-LA1OBgSCbacE4EBM"
-                              src="static/img/placeholder.gif"
+                              src="static/img/placeholder-square.png"
                               alt="Nickolay Sredin"
                             />
                             <noscript>
@@ -1010,7 +1001,7 @@
                             <img
                               class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C5603AQH7sdtTvuD1aA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=m670y2XNOp9cQirfewa-MvE402bO1FXHIJUI2YlTSCE"
-                              src="static/img/placeholder.gif"
+                              src="static/img/placeholder-square.png"
                               alt="Zakir Nuriev"
                             />
                             <noscript>
@@ -1045,7 +1036,7 @@
                             <img
                               class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C5603AQHYkihRJfcanw/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=83RxCbS7XwADdEhKh_VMfjXoi0UPkKLjAHY7p7LR3h8"
-                              src="static/img/placeholder.gif"
+                              src="static/img/placeholder-square.png"
                               alt="Beata Dobosiewicz"
                             />
                             <noscript>
@@ -1086,7 +1077,7 @@
                             <img
                               class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C5603AQGc3qiNTPKNEA/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=WdIjlf3uJw00ryTVsvZhnnECKq9dXeRUyzH0oyMux-s"
-                              src="static/img/placeholder.gif"
+                              src="static/img/placeholder-square.png"
                               alt="Vitaliy Gordiyenko"
                             />
                             <noscript>
@@ -1123,7 +1114,7 @@
                             <img
                               class="lozad lozad-hidden"
                               data-src="https://media.licdn.com/dms/image/C4E03AQFqN5_DpUf49g/profile-displayphoto-shrink_100_100/0?e=1565827200&v=beta&t=mGmTXv3TukTiVopZKlCtT07xT00p3GE2HQzqdkCM4wA"
-                              src="static/img/placeholder.gif"
+                              src="static/img/placeholder-square.png"
                               alt="Anton Vasko"
                             />
                             <noscript>
@@ -1171,7 +1162,7 @@
                       static/img/projects/canvas-practice_1024.png 1024w
                     "
                     data-src="static/img/projects/canvas-practice_1024.png"
-                    src="static/img/placeholder.gif"
+                    src="static/img/placeholder-wide.png"
                     class="projects__item-thumbnail lozad lozad-hidden"
                     alt="Canvas Practice"
                   />
@@ -1224,7 +1215,7 @@
                       static/img/projects/todo-list-react_1024.png 1024w
                     "
                     data-src="static/img/projects/todo-list-react_1024.png"
-                    src="static/img/placeholder.gif"
+                    src="static/img/placeholder-wide.png"
                     class="projects__item-thumbnail lozad lozad-hidden"
                     alt="ToDo List React"
                   />
@@ -1276,7 +1267,7 @@
                       static/img/projects/image-manager_1024.png 1024w
                     "
                     data-src="static/img/projects/image-manager_1024.png"
-                    src="static/img/placeholder.gif"
+                    src="static/img/placeholder-wide.png"
                     class="projects__item-thumbnail lozad lozad-hidden"
                     alt="Image Manager"
                   />
@@ -1330,12 +1321,12 @@
                       static/img/projects/magic-app-redux_1024.png 1024w
                     "
                     data-src="static/img/projects/magic-app-redux_1024.png"
-                    src="static/img/placeholder.gif"
+                    src="static/img/placeholder-wide.png"
                     class="projects__item-thumbnail lozad lozad-hidden"
                     alt="Magic App (Redux)"
                   />
                   <noscript>
-                      <img
+                    <img
                       sizes="(max-width: 1024px) 100vw, 1024px"
                       srcset="
                         static/img/projects/magic-app-redux_320.png   320w,
