Add social graphs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,40 @@
       content="Hello there 😊, I am a skilled Front-End Engineer with 4+ years of working experience both with front-end and back-end. I use the best techniques from both of these two worlds in all projects I am working on using a variety of frameworks such as React and Angular. Wanna learn more what I can do?"
     />
 
+    <meta
+      property="og:title"
+      content="Stas Sribnyi | Front-End Engineer | Interactive Resume"
+    />
+    <meta
+      property="og:description"
+      content="I am a skilled Front-End Engineer with 4+ years of working experience. I use the best techniques from both front-end and back-end worlds in all projects I am working on using a variety of frameworks"
+    />
+    <meta
+      property="og:image"
+      content="https://stassribnyi.github.io/personal/static/img/placeholder-social.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://stassribnyi.github.io/personal/index.html"
+    />
+
+    <meta
+      name="twitter:title"
+      content="Stas Sribnyi | Front-End Engineer | Interactive Resume"
+    />
+    <meta
+      name="twitter:description"
+      content="I am a skilled Front-End Engineer with 4+ years of working experience. I use the best techniques from both front-end and back-end worlds in all projects I am working on using a variety of frameworks"
+    />
+    <meta
+      name="twitter:image"
+      content="https://stassribnyi.github.io/personal/static/img/placeholder-social.jpg"
+    />
+    <meta
+      name="twitter:card"
+      content="https://stassribnyi.github.io/personal/static/img/placeholder-social.jpg"
+    />
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
