Refactor js and fix css issues

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="author" content="Stas Sribnyi" />
     <meta name="robots" content="index, follow" />
     <meta
@@ -79,6 +79,8 @@
       media="(min-width: 1281px)"
     />
     <link rel="preload" href="static/css/img/welcome-min.jpg" as="image" />
+    <link rel="preload" href="static/img/placeholder-square.png" as="image" />
+    <link rel="preload" href="static/img/placeholder-wide.png" as="image" />
 
     <!-- Prefetch -->
     <link rel="preconnect" href="https://www.googletagmanager.com" />
@@ -167,7 +169,7 @@
     </noscript>
     <link
       onload="this.onload = null;this.rel = 'stylesheet';"
-      media="screen and (min-width: 481px) and  (max-width: 768px)"
+      media="screen and (min-width: 481px) and (max-width: 768px)"
       href="static/css/tablet.query.css"
       rel="preload"
       as="style"
@@ -175,13 +177,13 @@
     <noscript>
       <link
         rel="stylesheet"
-        media="screen and (min-width: 481px) and  (max-width: 768px)"
+        media="screen and (min-width: 481px) and (max-width: 768px)"
         href="static/css/tablet.query.css"
       />
     </noscript>
     <link
       onload="this.onload = null;this.rel = 'stylesheet';"
-      media="screen and (min-width: 341px) and  (max-width: 480px)"
+      media="screen and (min-width: 341px) and (max-width: 480px)"
       href="static/css/mobile.query.css"
       rel="preload"
       as="style"
@@ -189,13 +191,13 @@
     <noscript>
       <link
         rel="stylesheet"
-        media="screen and (min-width: 341px) and  (max-width: 480px)"
+        media="screen and (min-width: 341px) and (max-width: 480px)"
         href="static/css/mobile.query.css"
       />
     </noscript>
     <link
       onload="this.onload = null;this.rel = 'stylesheet';"
-      media="screen and (min-width: 320px) and  (max-width: 340px)"
+      media="screen and (min-width: 320px) and (max-width: 340px)"
       href="static/css/small-mobile.query.css"
       rel="preload"
       as="style"
@@ -203,7 +205,7 @@
     <noscript>
       <link
         rel="stylesheet"
-        media="screen and (min-width: 320px) and  (max-width: 340px)"
+        media="screen and (min-width: 320px) and (max-width: 340px)"
         href="static/css/small-mobile.query.css"
       />
     </noscript>
