Add dynamic age calculation and fix css issues on mobile

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           </h1>
           <p>
             Nice to see you here. I am a skilled front-end engineer with more
-            than 4 years of working experience both with front-end and back-end.
+            than <span id="js--career-start">4</span> years of working experience both with front-end and back-end.
             I develop single-page web applications using a variety of frameworks
             such as React and Angular. I will be glad to collaborate with you.
           </p>
@@ -333,7 +333,7 @@
                 </li>
                 <li class="about__detail">
                   <span>Age:</span>
-                  <span>24 years</span>
+                  <span id="js--age">24</span> years
                 </li>
                 <li class="about__detail">
                   <span>Location:</span>
