Add comments, adjust namings and move event handlers into feature initializers

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           >
         </div>
       </div>
-      <nav class="nav">
+      <nav id="js--nav" class="nav">
         <p class="nav__title">
           Wanna learn more what I can do?
         </p>
@@ -288,6 +288,7 @@
             <li><a class="js--nav-link nav__link" href="#career">career</a></li>
           </ul>
           <a
+            id="js--nav__chevron"
             href="#about"
             class="nav__chevron ion-chevron-down"
             aria-label="Move up or down"
@@ -1533,7 +1534,7 @@
         </div>
         <div class="contacts__group">
           <h3 class="contacts__group-title">Contact me</h3>
-          <form class="contacts__form" id="contacts-form">
+          <form class="contacts__form" id="js--contacts-form">
             <div class="input">
               <label for="name">Your Name:</label>
               <input
