Remove useless css comments and make age in one line

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 </li>
                 <li class="about__detail">
                   <span>Age:</span>
-                  <span id="js--age">24</span> years
+                  <span><span id="js--age">24</span> years</span>
                 </li>
                 <li class="about__detail">
                   <span>Location:</span>
